[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-braket-julia-simulator"
version = "0.0.1"
authors = [
    {name = "Katharine Hyatt", email = "hyatkath@amazon.com"},
]
description = "Local simulation of quantum circuits, powered by Julia"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["amazon-braket-julia-simulator"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"*" = ["juliapkg.json"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.isort]
profile = "black"
